test/compile-errors/modifier-conflict.crow
main void()
	()

dm extern data, mut

ms record mut, shared

sfs record force-shared, shared

bvbr record by-ref, by-val
